--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-    <link rel='stylesheet' type='text/css' href='bower_components /ionicons/css/ionicons.min.css'>
+    <link rel='stylesheet' type='text/css' href='bower_components/ionicons/css/ionicons.min.css'>
     <link rel='stylesheet' type='text/css' href='main.css'>
     <script src='main.js'></script>
   </head>
